[gd_scene load_steps=8 format=3 uid="uid://b8pt5klumlxv6"]

[ext_resource type="Script" uid="uid://cexyj6mlvuu5p" path="res://scenes/menu/role_selection.gd" id="1_n3xej"]
[ext_resource type="Texture2D" uid="uid://bgu74ogq6w6c0" path="res://assets/background.png" id="1_ocvwv"]
[ext_resource type="FontFile" uid="uid://dvliwf4sqt3hy" path="res://assets/fonts/Minecraft.ttf" id="2_4kw4e"]
[ext_resource type="Texture2D" uid="uid://dwtilhk1kenj" path="res://assets/symbol_icons/Big (120x120) PNG/Black/Arrow Right_Black.png" id="4_n3xej"]
[ext_resource type="Texture2D" uid="uid://be18a840g6ogj" path="res://assets/symbol_icons/Big (120x120) PNG/Black/Arrow Left_Black.png" id="4_y5g61"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ocvwv"]
texture = ExtResource("1_ocvwv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84o1y"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5
shadow_color = Color(0, 0, 0, 0.34117648)
shadow_size = 5

[node name="name_input" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3xej")

[node name="Panel" type="Panel" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -50.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ocvwv")

[node name="Label" type="Label" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.324
anchor_right = 0.5
anchor_bottom = 0.324
offset_left = -94.5
offset_top = -32.64
offset_right = 94.5
offset_bottom = -3.6399994
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("2_4kw4e")
theme_override_font_sizes/font_size = 15
text = "Select your level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back_button" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.068
anchor_top = 0.407
anchor_right = 0.068
anchor_bottom = 0.407
offset_left = -9.352
offset_top = -8.803
offset_right = 118.648
offset_bottom = 119.197
scale = Vector2(0.14498001, 0.13765766)
icon = ExtResource("4_y5g61")

[node name="next_button" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.089
anchor_top = 0.476
anchor_right = 0.105000004
anchor_bottom = 0.476
offset_left = 143.679
offset_top = -9.804
offset_right = 268.655
offset_bottom = 118.196
scale = Vector2(0.14498001, 0.13765766)
icon = ExtResource("4_n3xej")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.75
offset_top = -10.0
offset_right = 112.75
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="civilian" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.31
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4kw4e")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxFlat_84o1y")
text = "CIVILIAN"

[node name="intermediate" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.31
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4kw4e")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxFlat_84o1y")
text = "HR officer"

[node name="professional" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.31
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4kw4e")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxFlat_84o1y")
text = "IT admin"

[connection signal="pressed" from="Label/back_button" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Label/next_button" to="." method="_on_next_pressed"]
[connection signal="pressed" from="HBoxContainer/civilian" to="." method="_on_civilian_pressed"]
[connection signal="pressed" from="HBoxContainer/intermediate" to="." method="_on_intermediate_pressed"]
[connection signal="pressed" from="HBoxContainer/professional" to="." method="_on_professional_pressed"]
